--- a/package.json
+++ b/package.json
@@ -59,14 +59,15 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
-    "react": "^17.0.1",
+    "react": "^16.14.0",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.14.0",
     "react-refresh": "^0.8.3",
     "remark": "^13.0.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
+    "rich-markdown-editor": "^11.0.9",
     "sass-loader": "8.0.2",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
