--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@toast-ui/react-editor": "^2.5.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "@uiw/react-md-editor": "^2.0.0",
     "antd": "^4.9.4",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
@@ -26,6 +28,7 @@
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "classnames": "^2.2.6",
+    "codemirror": "^5.59.0",
     "css-loader": "4.3.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -51,6 +54,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "mini-css-extract-plugin": "0.11.3",
+    "mobx-react": "^7.0.5",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -67,7 +71,6 @@
     "remark": "^13.0.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
-    "rich-markdown-editor": "^11.0.9",
     "sass-loader": "8.0.2",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
