--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "@uiw/react-md-editor": "^2.0.0",
     "antd": "^4.9.4",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
@@ -53,6 +52,7 @@
     "jest-watch-typeahead": "0.6.1",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
+    "lodash": "^4.17.20",
     "mini-css-extract-plugin": "0.11.3",
     "mobx-react": "^7.0.5",
     "optimize-css-assets-webpack-plugin": "5.0.4",
@@ -67,6 +67,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.1",
     "react-dom": "^16.14.0",
+    "react-drag-sizing": "^0.1.0-alpha.1",
     "react-refresh": "^0.8.3",
     "remark": "^13.0.0",
     "resolve": "1.18.1",
@@ -165,6 +166,7 @@
     ]
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.11"
+    "@types/classnames": "^2.2.11",
+    "@types/lodash": "^4.14.165"
   }
 }
